--- a/src/CodigosHtml/front/js/TipoString.html
+++ b/src/CodigosHtml/front/js/TipoString.html
@@ -50,8 +50,7 @@
             <ol>
               <li>Esta encerrado entre comillas simples o dobles (" ", ' ')</li>
               <li></li>
-              <li></li>
-              <li></li>
+             
             </ol>
             <p><br /><br /></p>
           </details>
@@ -87,6 +86,11 @@
         <li class="li">
           <details class="select">
             <summary>includes()</summary>
+            <p>Método Array.prototype.includes <br>
+Qué: verifica si un array contiene un valor específico. <br>
+Sintaxis: array.includes(valorBuscado, indiceInicioOpcional) <br>
+
+</p>
             <script>
               let cadena =
                 "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic molestias repellendus, deserunt suscipit sit commodi eos dolorum ut aspernatur. Quia tempore incidunt consectetur voluptates aliquid eligendi molestiae pariatur blanditiis neque!";
