--- a/src/CodigosHtml/home/Recordaris.html
+++ b/src/CodigosHtml/home/Recordaris.html
@@ -19,98 +19,98 @@
     <h1>PARA SOFÍA</h1>
     <ol>
       <li>Lo que algún día necesitará</li>
-      <li></li>
+   <br>
     </ol>
     <img src="/src/assets/image/home/25 AÑOS.jpeg" alt="" class="img" />
 
     <div>
       <ol>
-        <li></li>
+  
         <li>CORREOS ELECTRÓNICOS</li>
-        <li></li>
+     <br>
         <li>CORP_CUEVA</li>
         <li>Usuario: admin</li>
-        <li>Password: admin</li>
-        <li></li>
+        <li>Password: admin</li><br>
+       
         <li>MGM</li>
         <li>Usuario: sistemas</li>
         <li>Password: Pa$w0rd.</li>
-        <li></li>
+       <br>
         <li>STUDIO</li>
         <li>Usuario: sistemas</li>
         <li>Password: sistemas</li>
-        <li></li>
+   <br>
         <li>SURSA</li>
         <li>Usuario: mcervera</li>
         <li>Password: 1x</li>
-        <li></li>
+     <br>
         <li>PUNTOXPERTO</li>
         <li>Usuario: sistemas</li>
         <li>Password: admin</li>
-        <li></li>
+     <br>
         <li>NEOAUTOS</li>
         <li>Usuario: admin</li>
         <li>Password: admin</li>
-        <li></li>
+     <br>
         <li>SHAREPOINT</li>
         <li>Usuario: sistemas</li>
         <li>Password: sistemas</li>
-        <li></li>
+     <br>
         <li>FABRIPACK</li>
         <li>Usuario: sistemas</li>
         <li>Password: sistemas</li>
-        <li></li>
+     <br>
         <li>INTERNET CASA</li>
         <li>Usuario:</li>
         <li>Password: Pi.31416</li>
-        <li></li>
+     <br>
         <li>CUENTA MICROSOFT</li>
         <li>CORREO: carlosmartin1993@gmail.com</li>
         <li>contraseña: CARLOS1208 o carlos1208</li>
-        <li></li>
+     <br>
         <li>CLAVE PC ASUS</li>
         <li>Usuario:</li>
         <li>Password: 2607</li>
         <li>Password: 1208</li>
-        <li></li>
-        <li></li>
+     <br>
+     <br>
         <li>SUMINISTRO DE LUZ</li>
         <li>Usuario: CERVERA PONCE CARLOS</li>
         <li>Password: 1172692</li>
-        <li></li>
+     <br>
         <li>SUNAT-CLAVE SOL</li>
         <li>Correo: carlosmartin1993@gmail.com</li>
         <li>pass: Carlossofia1</li>
         <li>ruc de studioXperto: 20612748854</li>
-        <li></li>
+     <br>
         <li>SUNAT-CLAVE SOL</li>
         <li>Correo: carlosmartin1993@gmail.com</li>
         <li>pass: Amarparavivir260793</li>
-        <li></li>
-        <li></li>
+     <br>
+     <br>
         <li>MINEDU</li>
         <li>usuario 15367782</li>
         <li>pass: CarlosSofia2607</li>
-        <li></li>
+     <br>
         <li>GIT</li>
         <li>user: nitram26</li>
         <li>pass:carlosmartin2607</li>
         <li>email: carlosmartin1993@gmail.com</li>
-        <li></li>
+     <br>
         <li>user: carlos260793</li>
         <li>pass:carlosmartin2607</li>
         <li>email: carlosmcervera1993@gmail.com</li>
-        <li></li>
+     <br>
         <li>user: cmncp</li>
         <li>pass: sanpedro2024</li>
         <li>email: carlosmcervera1993@gmail.com</li>
-        <li></li>
-        <li></li>
-        <li></li>
+     <br>
+     <br>
+     <br>
         <li>INTERBANK</li>
         <li>TARJETA: 2607</li>
         <li>TELEFONO: Amarparavivir260793</li>
-        <li></li>
+     <br>
         <li>CORREO</li>
         <li>correo: carlosmartin1993@gmail.com</li>
         <li>clave: amarparavivir260793</li>
