--- a/block.html
+++ b/block.html
@@ -1,44 +1,13 @@
-<template>
-  <div class="bg-teal-lighten-2 text-white">
-    <h1 class="text-center">V-Bind</h1>
-    <div class="uno">
-      <h3 v-show="active==true" class="activo">Cambia de Formato</h3>
-      <h3 v-show="active==false" class="inactivo">Cambia de Formato</h3>
-
-      <v-btn @click="active = !active" class="bg-purple">Botón Formato</v-btn>
-    </div>
-  </div>
-</template>
-<!-- ++++++++++++++++++++++++++++++++++++++++++ -->
-<script setup>
-  import { ref } from "vue";
-
-  const active = ref(true);
-</script>
-<!-- ++++++++++++++++++++++++++++++++++++++++++ -->
-<style scoped>
-  .uno {
-    padding: 20px;
-    border-radius: 8px;
-    margin-left: 40%;
-    color: white;
-  }
-
-  ol {
-    padding-left: 20px;
-    border-radius: 8px;
-    padding-bottom: 1em;
-  }
-
-  .activo {
-    color: #ff0000;
-    font-size: 20px;
-    font-weight: bold;
-  }
-
-  .inactivo {
-    color: blue;
-    font-size: 20px;
-    font-weight: bold;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Error en código html </h1>
+  <p>Tener mucho cuidado cuando se escribe código js dentro de html, lo mejor es ponerlo dentro de un &lt;pre> y  &lt;code> remplazando todo signo &lt; por &+lt+; todo junto </p>
+  <p>No se debe usar los br dentro de js, si se quiere que el código este ordenado se usa el pre, el code indica que se quiere mostrar código js </p>
+</body>
+</html>
