--- a/src/CodigosHtml/front/js/operadorTernario.html
+++ b/src/CodigosHtml/front/js/operadorTernario.html
@@ -126,20 +126,24 @@ console.log(pago);	<br>
               17-15, APROBADO 15-11, SUSPENSO 10-0) según su calificación
               numérica.
             </summary>
-            <p>
-              let nota = 17	<br>
-	<br>
-let notas = 	<br>
-(nota>=18 && nota <=20)? 'Sobresaliente'	<br>
- :(nota>=15 && nota <=17)? 'Notable'	<br>
- :(nota>=11 && nota <=14)? 'Aprobado'	<br>
- :(nota>=0 && nota <=10)? 'suspenso'	<br>
-: ' No valido'	<br>
-	<br>
-console.log(notas);	<br>
-	<br>
+            
+ <pre>
+  <code>
+                 let nota = 17	
+	
+let notas = 	
+(nota>=18 && nota &lt;=20)? 'Sobresaliente'	
+ :(nota>=15 && nota &lt;=17)? 'Notable'	
+ :(nota>=11 && nota &lt;=14)? 'Aprobado'	
+ :(nota>=0 && nota &lt;=10)? 'suspenso'	
+: ' No valido'	
+	
+console.log(notas);	
+	
 
-            </p>
+  </code>
+ </pre>
+         
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
